--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
   implementation 'io.netty:netty-all'
   implementation 'org.apache.logging.log4j:log4j-api'
   implementation 'org.apache.logging.log4j:log4j-core'
+  implementation 'org.slf4j:slf4j-api:2.0.16'
 
   testImplementation 'org.assertj:assertj-core'
   testImplementation 'org.junit.jupiter:junit-jupiter-api'
